# allo-capability-pack-devkit

./: README.md  build_pack.py
docs/: 本地调试方案.md
pack-skeleton/: README.md  pack.json  wheels-requirements.txt
pack-skeleton/backend-ext/: pack_backend.json
pack-skeleton/backend-ext/skeleton_pack/: __init__.py  startup.py
pack-skeleton/backend-ext/skeleton_pack/frontend_dist/: index.html
pack-skeleton/backend-ext/skeleton_pack/routers/: demo.py  static.py
pack-skeleton/backend-ext/skeleton_pack/services/: demo_service.py
pack-skeleton/frontend-sample/: SkeletonDemoApp.tsx
protected-wheel-example/: README.md  build_wheel.py  pyproject.toml  setup.py
protected-wheel-example/src/demo_biz_core/: __init__.py  engine.py
